--- a/res/anim/slide_finish.xml
+++ b/res/anim/slide_finish.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
      android:shareInterpolator="false">
   <translate
-     android:fromXDelta="250%" android:toXDelta="0%"
-     android:fromYDelta="0%" android:toYDelta="0%"
-     android:duration="2500" />
+     android:fromXDelta="250%" 
+     
+     android:duration="1500" />
 </set>
 
