--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -155,7 +155,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/level_finished"
-        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
        
         ></ImageView>
 </RelativeLayout>
