--- a/res/layout/slider_layout.xml
+++ b/res/layout/slider_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@drawable/back_slider">"
         
-    <com.kidsgames.start.MyPager
+    <com.kidsgames.menu.FixedSpeedViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -19,7 +19,7 @@
     android:layout_centerVertical="true"
     android:layout_alignParentLeft="true"
     android:background="@drawable/left_arrow"
-    ></TextView>
+   />
 
 <TextView
     android:id="@+id/right_arrow"
@@ -28,7 +28,7 @@
     android:layout_centerVertical="true"
     android:layout_alignParentRight="true"
     android:background="@drawable/right_arrow"
-    ></TextView>
+    />
 
 <TextView
     android:id="@+id/home_button"
@@ -39,6 +39,6 @@
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/home"
-    ></TextView>
+    />
         
 </RelativeLayout>
